Test/bad/staging/walid_cross_stage_safety_2.tt
import Data.Nat

-- Cross-stage safety.
-- We shouldn't be allowed to evaluate something at level 0 if it is defined at level 1
g : Nat -> < Nat -> Nat >
pat a : Nat =>
  g a = [| \b : Nat => ~(plus a b) |]